--- a/mib/templates/create_user.html
+++ b/mib/templates/create_user.html
@@ -1,29 +1,23 @@
 {% extends "base.html" %}
-{% from 'bootstrap/wtf.html' import form_field %}
-
-{% block title %} Sign up {% endblock %}
+{% block title %}Index{% endblock %}
 
 {% block content %}
-    <div class="row">
-        <div class="col-md-12">
-            <h2 class="display-4">Sign up</h2>
-        </div>
-    </div>
-    <div class="row">
-        <div class="col-md-8">
-            <form action="" method="POST">
-                {{ form.hidden_tag() }}
-
-                {% for field in form.display %}
-                    {{ form_field(form[field]) }}
-                {% endfor %}
-                <input type=submit value="Signup" class="btn btn-primary">
-            </form>
-        </div>
-    </div>
-
-
-{% endblock %}
-
-{% block footer %}
+<h1>Create a new user</h1>
+<a href="/" class="btn btn-outline-primary">Homepage</a><br><br>
+<p style="color:red">{{error}}</p>
+<form action="" method="POST">
+	{{ form.hidden_tag() }}
+	<dl>
+		{% for field in form.display %}
+		<dt>{{ form[field].label }}</dt>
+		<dd>{{ form[field]() }}</dd><br>
+		{% if form[field].errors %}
+		{% for e in form[field].errors %}
+		<p class="help-block">{{ e }}</p>
+		{% endfor %}
+		{% endif %}
+		{% endfor %}
+	</dl>
+	<p><input type=submit value="Submit"></p>
+</form>
 {% endblock %}
