--- a/mib/templates/users.html
+++ b/mib/templates/users.html
@@ -1,17 +1,15 @@
-{% extends "base.html" %}
+<html>
 
-{% block title %} Users {% endblock %}
+<body>
+	<h1>User List</h1>
+	<ul>
+		{% for user in users: %}
+		<li>
+			{{user.firstname}} {{user.lastname}}, {{user.email}}
+		</li>
+		{% endfor %}
+	</ul><br>
+	<a href="/">Home</a>
+</body>
 
-{% block content %}
-    <h1>User List</h1>
-    <ul>
-        {% for user in users%}
-            <li>
-                {{ user.firstname }} {{ user.lastname }}
-            </li>
-        {% endfor %}
-    </ul>
-{% endblock %}
-
-{% block footer %}
-{% endblock %}
+</html>
