--- a/mib/templates/black_list.html
+++ b/mib/templates/black_list.html
@@ -18,7 +18,7 @@
 			contentType: "application/json",
 			dataType: "json",
 			data: body,
-			url: "{{url_for('users.handle_black_list')}}",
+			url: "{{url_for('users.black_list')}}",
 			success: function (data, status) {
 				console.log("Response: ");
 				console.log(data);
