--- a/mib/templates/edit_profile.html
+++ b/mib/templates/edit_profile.html
@@ -15,7 +15,7 @@
 		<h5>Date of birth</h5><input type="date" name="textbirth" value={{user.dateofbirth}}>
 		<p>
 			<br>
-			<input type=submit value="Submit" class="btn btn-outline-primary"><br>
+			<input type=submit value="Submit" class="btn btn-outline-primary"><br><br>
 			<h7 style="color: red;"> {{ error }}</h7>
 </div>
 {% endblock %}
