--- a/mib/templates/reset_password.html
+++ b/mib/templates/reset_password.html
@@ -13,7 +13,7 @@
 		<h5>Confirm password</h5>{{ form.confirmpassword }}
 		<p>
 			<br>
-			<input type=submit value="Submit" class="btn btn-outline-primary"><br>
+			<input type=submit value="Submit" class="btn btn-outline-primary"><br><br>
 			<h7 style="color: red;"> {{ error }}</h7>
 			<h7 style="color: green;"> {{ success }}</h7>
 </div>
