--- a/mib/templates/login.html
+++ b/mib/templates/login.html
@@ -4,6 +4,7 @@
 {% block content %}
 <form action="" method="POST">
 	<h1>Please sign in</h1>
+	<a href="/" class="btn btn-outline-primary">Homepage</a><br><br>
 	{{ form.hidden_tag() }}
 	<dl>
 		{% for field in form.display %}
