--- a/mib/templates/base.html
+++ b/mib/templates/base.html
@@ -6,8 +6,8 @@
 	<title>{% block title %}{% endblock %} | MMIAB</title>
 
 	<script src="{{url_for('static', filename='jquery.min.js')}}"></script>
-	<link href="{{url_for('static', filename='bootstrap/css/bootstrap.min.css')}}" rel="stylesheet">
-	<script src="{{url_for('static', filename='bootstrap/js/bootstrap.bundle.min.js')}}"></script>
+	<link href="{{url_for('static', filename='bootstrap.min.css')}}" rel="stylesheet">
+	<script src="{{url_for('static', filename='bootstrap.bundle.min.js')}}"></script>
 	<style>
 		body {
 			margin: 2rem 2rem 2rem 2rem
